--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-    <link href="./styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>Match&Compare</title>
 </head>
 
@@ -101,7 +101,7 @@
         </div>
     </div>
 
-    <script src="renderer.js"></script>
+    <script src="\javascript.js"></script>
 </body>
 
 </html>
