--- a/index.html
+++ b/index.html
@@ -83,20 +83,20 @@
     <div class="divider"></div>
     <div class="container1">
         <div class="help-info">
-            <p><strong><strong><span style="color: #3a3939">"Bulk List"</span></strong> format has to be <strong><span style="color: #3a3939">(Item Number, Item Name)</span></strong> no item quantities before or after.
+            <p><strong><strong>"Bulk List"</strong> format has to be <strong>(Item Number, Item Name)</strong> no item quantities before or after.
             </p>
-            <p><strong><span style="color: #3a3939">"Order List"</span></strong> format has to be <strong><span style="color: #3a3939">(Item Quantity, Item Number, Item Name)</span></strong>.</p>
+            <p><strong>"Order List"</strong> format has to be <strong>(Item Quantity, Item Number, Item Name)</strong>.</p>
             <div class="divider-info"></div>
 
 
             <ul>
-                <li><strong><strong><span style="color: #494949">Text Formatting:</span></strong></li>
+                <li><strong><strong>Text Formatting:</strong></li>
                 <ul>
                     <li> Ensures there is only one space between a string of text - will remove extra spaces.</li>
-                    <li> Removes <strong><span style="color: #888383">"</span></strong> / <strong><span style="color: #888383">-</span></strong> / <strong><span style="color: #888383">,</span></strong> from text.</li>
+                    <li> Removes <strong>"</strong> / <strong>-</strong> / <strong>,</strong> from text.</li>
                 </ul>
                 <div class="divider-info"></div>
-                <P>To reset list click <strong><span style="color: #3a3939">"Clear"</span></strong> button or use <strong><span style="color: #3a3939">"CTRL + R"</span></strong></P>
+                <P>To reset list click <strong>"Clear"></strong> button or use <strong>"CTRL + R"</strong></P>
             </ul>
         </div>
     </div>
