--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' http://127.0.0.1:3000/index.html;">
 
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type=“text/css”>
     <title>Match&Compare</title>
 </head>
 
