--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <script src="\javascript.js"></script>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
