--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="tapani">
-        <img class="tapani-logo" src="images\tapani-logo.png">
+        <img class="tapani-logo" src="images\logo.png">
         <h1>Tapani Inc</h1>
     </div>
     <div class="divider"></div>
