--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-    <link href="style.css" rel="stylesheet" type=“text/css”>
+    <link href="MatchCompare\style.css" rel="stylesheet" type=“text/css”>
     <title>Match&Compare</title>
 </head>
 
