--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- <button id="compareBtn">Compare</button> -->
     <h6 class="reminder ">Results are copied automatically</h6>
     <button id="refreshBtn">Clear</button>
-    <div class="divider"></div>
+    <div class="divider clear"></div>
     <div class="resultcontainer">
         <div id="result">
         </div>
